<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>com.hibegin</groupId>
    <artifactId>zrlog-plugin-parent</artifactId>
    <modelVersion>4.0.0</modelVersion>
    <version>4.0.5-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>ZrLog plugin core</description>
    <name>ZrLog plugin core</name>
    <url>https://www.zrlog.com/plugin/</url>

    <modules>
        <module>zrlog-plugin-common</module>
        <module>zrlog-plugin-freemarker-render</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gpg.passphrase />
    </properties>

    <developers>
        <developer>
            <email>support@zrlog.com</email>
            <url>https://www.zrlog.com</url>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/94fzb/zrlog-plugin-common</connection>
        <developerConnection>scm:git:https://github.com/94fzb/zrlog-plugin-common</developerConnection>
        <url>https://github.com/94fzb/zrlog-plugin-common</url>
        <tag>zrlog-plugin-parent-3.0.5-SNAPSHOT</tag>
    </scm>
    <issueManagement>
        <system>Github Issue</system>
        <url>https://github.com/94fzb/zrlog-plugin-common</url>
    </issueManagement>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.properties</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
                <version>3.11.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>8</source>
                    <detectJavaApiLink>false</detectJavaApiLink>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <passphrase>${gpg.passphrase}</passphrase>
                    <useAgent>false</useAgent>
                    <executable>gpg</executable>
                    <gpgArguments>
                        <argument>--pinentry-mode</argument>
                        <argument>loopback</argument>
                    </gpgArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.13.1</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>zrlog-plugin-common</artifactId>
                <version>4.0.5-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.hibegin</groupId>
                <artifactId>zrlog-plugin-freemarker-render</artifactId>
                <version>4.0.5-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
